--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 kate (4:4.7.1-0r0) UNRELEASED; urgency=low
 
-  * Initial release.
+  * Initial release. Start from the Ubuntu packaging, thanks!
 
  -- José Manuel Santamaría Lema <panfaust@gmail.com>  Fri, 16 Sep 2011 21:16:20 +0200
