--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-kate (4:4.7.2-0r0) UNRELEASED; urgency=low
+kate (4:4.7.2-0r0) experimental; urgency=low
 
   * Initial release. Start from the Ubuntu packaging, thanks!
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 08 Oct 2011 13:35:22 +0200
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 03 Dec 2011 10:43:09 -0300
