--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kate (4:4.7.2-0r0) experimental; urgency=low
+kate (4:4.7.2-1) experimental; urgency=low
 
   * Initial release. Start from the Ubuntu packaging, thanks!
 
