kate-dbg: fix kdelibs-dbg -> kdelibs5-dbg typo (#652196)

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ kate (4:4.7.4-0r0) UNRELEASED; urgency=low
 
   * New upstream release.
 
+  [ Pino Toscano ]
+  * kate-dbg:
+    - fix kdelibs-dbg -> kdelibs5-dbg typo (Closes: #652196)
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 05 Dec 2011 21:35:44 +0100
 
 kate (4:4.7.2-1) experimental; urgency=low
