--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kate (4:4.7.4-0r0) UNRELEASED; urgency=low
+kate (4:4.7.4-1) experimental; urgency=low
 
   * New upstream release.
 
@@ -7,7 +7,7 @@ kate (4:4.7.4-0r0) UNRELEASED; urgency=low
     - fix kdelibs-dbg -> kdelibs5-dbg typo (Closes: #652196)
     - remove extra dependency on libqt4-dbg
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 05 Dec 2011 21:35:44 +0100
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 18 Dec 2011 01:35:02 +0100
 
 kate (4:4.7.2-1) experimental; urgency=low
 
