--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+kate (4:4.7.95-0r0) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+  [ Eshat Cakar ]
+  * Update installed files.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 05 Jan 2012 17:03:29 +0100
+
 kate (4:4.7.4-1) experimental; urgency=low
 
   * New upstream release.
