--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ kate (4:4.7.95-0r0) UNRELEASED; urgency=low
 
   [ Eshat Cakar ]
   * Update installed files.
+  * Update not-installed files.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 05 Jan 2012 17:03:29 +0100
 
