--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ kate (4:4.8.0-0r0) UNRELEASED; urgency=low
   [ Eshat Cakar ]
   * Update installed files.
   * Update not-installed files.
+  * Bump kdelibs5-dev build dependency to version 4:4.8.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 05 Jan 2012 17:03:29 +0100
 
