--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 kate (4:4.7.4-3) UNRELEASED; urgency=low
 
+  [ Pino Toscano ]
+  * Drop README.Debian, wrongly copied from kde4libs.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 08 Mar 2012 12:13:57 +0100
 
