--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kate (4:4.8.0-0r0) UNRELEASED; urgency=low
+kate (4:4.8.1-0r0) UNRELEASED; urgency=low
 
   * New upstream release.
 
@@ -7,7 +7,7 @@ kate (4:4.8.0-0r0) UNRELEASED; urgency=low
   * Update not-installed files.
   * Bump kdelibs5-dev build dependency to version 4:4.8.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 05 Jan 2012 17:03:29 +0100
+ -- Eshat Cakar <info@eshat.de>  Thu, 08 Mar 2012 18:29:52 +0100
 
 kate (4:4.7.4-1) experimental; urgency=low
 
