--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ kate (4:4.8.1-0r0) UNRELEASED; urgency=low
   * Update installed files.
   * Update not-installed files.
   * Bump kdelibs5-dev build dependency to version 4:4.8.
+  * Bump Standards-Version to 3.9.3, no changes needed.
 
  -- Eshat Cakar <info@eshat.de>  Thu, 08 Mar 2012 18:29:52 +0100
 
