--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ kate (4:4.8.3-0r1) UNRELEASED; urgency=low
 
   [ Modestas Vainius ]
   * Add myself to Uploaders.
+  * Drop dh_makeshlibs override: not needed as there are no symbol files.
 
  -- Eshat Cakar <info@eshat.de>  Thu, 08 Mar 2012 18:29:52 +0100
 
