--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ kate (4:4.8.4-0r0) UNRELEASED; urgency=low
 
   [ Eshat Cakar ]
   * Add watch file.
+  * Bump kde-sc-dev-latest build dependency to version 4:4.8.4.
 
  -- Eshat Cakar <info@eshat.de>  Mon, 04 Jun 2012 22:50:54 +0200
 
