--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ kate (4:4.9.5-0r0) UNRELEASED; urgency=low
   [ José Manuel Santamaría Lema ]
   * Bump kdelibs5-dev build dependency to version 4:4.9.
   * Bump kde-sc-dev-latest build dependency to version 4:4.9.5.
+  * Update installed files.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 12 Jan 2013 00:32:41 +0100
 
