--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ kate (4:4.9.5-0r0) UNRELEASED; urgency=low
   * Bump kdelibs5-dev build dependency to version 4:4.9.
   * Bump kde-sc-dev-latest build dependency to version 4:4.9.5.
   * Update installed files.
+  * Add lintian override for hardening-no-fortify-functions.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 12 Jan 2013 00:32:41 +0100
 
