--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ kate (4:4.10.0-0r0) UNRELEASED; urgency=low
   [ José Manuel Santamaría Lema ]
   * Bump kde-sc-dev-latest build dependency to version 4:4.10.0.
   * Bump kdelibs5-dev build dependency to version 4:4.10.
+  * Add build depends:
+    - libkactivities-dev
+    - libqjson-dev
   * Update installed files.
   * Add lintian override for hardening-no-fortify-functions.
   * Merge 4:4.7.4-3 changelog entry into 4:4.8.3-1, because the former was
