--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,7 @@ kate (4:4.10.0-0r0) UNRELEASED; urgency=low
 
   [ Josep Febrer ]
   * Update installed files.
+  * Update not-installed files.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 12 Jan 2013 00:32:41 +0100
 
