--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kate (4:4.10.1-0r0) UNRELEASED; urgency=low
+kate (4:4.10.2-1) experimental; urgency=low
 
   * New upstream release.
 
@@ -20,7 +20,10 @@ kate (4:4.10.1-0r0) UNRELEASED; urgency=low
   * Bump kde-sc-dev-latest build dependency to version 4:4.10.1.
   * Update copyright file.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 12 Jan 2013 00:32:41 +0100
+  [ Sune Vuorela ]
+  * Add me to uploaders
+
+ -- Sune Vuorela <sune@debian.org>  Wed, 03 Apr 2013 06:43:08 +0000
 
 kate (4:4.8.4-1) unstable; urgency=low
 
