--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+kate (4:4.10.2-2) UNRELEASED; urgency=low
+
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 08 Apr 2013 13:21:40 +0200
+
 kate (4:4.10.2-1) experimental; urgency=low
 
   * New upstream release.
