--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 kate (4:4.10.2-2) UNRELEASED; urgency=low
 
+  [ Pino Toscano ]
+  * Add the pkg-config build dependency.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 08 Apr 2013 13:21:40 +0200
 
