--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ kate (4:4.10.2-2) UNRELEASED; urgency=low
   [ Pino Toscano ]
   * Add the pkg-config build dependency.
 
+  [ Sune Vuorela ]
+  * Update uploaders.
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 08 Apr 2013 13:21:40 +0200
 
 kate (4:4.10.2-1) experimental; urgency=low
