--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kate (4:4.10.2-2) UNRELEASED; urgency=low
+kate (4:4.10.2-2) experimental; urgency=low
 
   [ Pino Toscano ]
   * Add the pkg-config build dependency.
@@ -6,7 +6,7 @@ kate (4:4.10.2-2) UNRELEASED; urgency=low
   [ Sune Vuorela ]
   * Update uploaders.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 08 Apr 2013 13:21:40 +0200
+ -- Sune Vuorela <sune@debian.org>  Mon, 29 Apr 2013 01:30:04 +0200
 
 kate (4:4.10.2-1) experimental; urgency=low
 
