--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:4.10.3-1) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 28 May 2013 10:54:59 +0200
+
 kate (4:4.10.2-2) experimental; urgency=low
 
   [ Pino Toscano ]
