--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 kate (4:4.10.5-2) UNRELEASED; urgency=low
 
+  [ Pino Toscano ]
+  * Drop the nesc.xml kate syntax highlighting, as nescc provides it already.
+    (Closes: #716942)
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 15 Jul 2013 13:08:02 +0200
 
