--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-kate (4:4.10.5-2) UNRELEASED; urgency=low
+kate (4:4.10.5-2) unstable; urgency=low
 
-  [ Pino Toscano ]
+  * Team upload.
   * Drop the nesc.xml kate syntax highlighting, as nescc provides it already.
     (Closes: #716942)
   * Update lintian overrides.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 15 Jul 2013 13:08:02 +0200
+ -- Pino Toscano <pino@debian.org>  Mon, 22 Jul 2013 10:12:45 +0200
 
 kate (4:4.10.5-1) unstable; urgency=low
 
