--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:4.11.1-0r0) UNRELEASED; urgency=low
+
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 03 Sep 2013 20:18:45 +0200
+
 kate (4:4.10.5-2) unstable; urgency=low
 
   * Team upload.
