--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+kate (4:4.10.5-3) UNRELEASED; urgency=low
+
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 10 Sep 2013 12:12:36 +0200
+
 kate (4:4.10.5-2) unstable; urgency=low
 
   * Team upload.
