--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kate (4:4.11.1-0r0) UNRELEASED; urgency=low
+kate (4:4.11.2-1) UNRELEASED; urgency=low
 
   * New upstream release.
 
@@ -8,7 +8,7 @@ kate (4:4.11.1-0r0) UNRELEASED; urgency=low
   [ Pino Toscano ]
   * Fix section of libkatepartinterfaces4 to be "libs".
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 10 Sep 2013 12:12:36 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 05 Oct 2013 13:11:48 +0200
 
 kate (4:4.10.5-2) unstable; urgency=low
 
