--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 kate (4:4.11.2-2) UNRELEASED; urgency=low
 
+  * Bump kdelibs5-dev build dependency.
+
  -- Maximiliano Curia <maxy@debian.org>  Sat, 05 Oct 2013 20:57:57 +0200
 
 kate (4:4.11.2-1) experimental; urgency=low
