--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kate (4:4.11.3-1) UNRELEASED; urgency=low
+kate (4:4.11.3-1) unstable; urgency=low
 
   * New upstream release.
   * Update build dependencies.
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 08 Nov 2013 13:51:08 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 08 Nov 2013 14:07:22 +0100
 
 kate (4:4.11.2-2) experimental; urgency=low
 
