--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 kate (4:4.11.3-2) UNRELEASED; urgency=low
 
+  [ Pino Toscano ]
+  * Do not install (again) the go.xml and nesc.xml highlighting files, as they
+    are already provided by other packages. (Closes: #726756)
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 30 Nov 2013 15:07:10 +0100
 
