--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:4.11.3-3) UNRELEASED; urgency=low
+
+  * Update package descriptions. (Closes: #731894)
+
+ -- Sune Vuorela <sune@debian.org>  Wed, 11 Dec 2013 08:13:03 +0100
+
 kate (4:4.11.3-2) unstable; urgency=low
 
   * Team upload.
