--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-kate (4:4.11.4-1) UNRELEASED; urgency=low
+kate (4:4.11.5-1) UNRELEASED; urgency=low
 
   * New upstream release.
 
   [ Sune Vuorela ]
   * Update package descriptions. (Closes: #731894)
 
- -- Sune Vuorela <sune@debian.org>  Wed, 11 Dec 2013 08:13:03 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 24 Jan 2014 13:02:53 -0300
 
 kate (4:4.11.3-2) unstable; urgency=low
 
