--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:4.12.2-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 04 Feb 2014 19:12:05 +0100
+
 kate (4:4.11.5-1) unstable; urgency=low
 
   * New upstream release.
