--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-kate (4:4.12.2-1) UNRELEASED; urgency=medium
+kate (4:4.12.2-1) experimental; urgency=medium
 
   * New upstream release.
   * Bump kde4libs b-d version.
   * Update install files.
   * Bump kde-sc-dev-latest build dependency.
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 04 Feb 2014 19:12:05 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 10 Feb 2014 11:31:28 +0100
 
 kate (4:4.11.5-1) unstable; urgency=low
 
