--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:4.12.3-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 28 Feb 2014 23:23:00 +0100
+
 kate (4:4.12.2-1) experimental; urgency=medium
 
   * New upstream release.
