--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:4.12.4-1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 31 Mar 2014 22:37:20 +0200
+
 kate (4:4.12.3-1) experimental; urgency=medium
 
   * New upstream release.
