--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kate (4:4.12.4-1~) UNRELEASED; urgency=medium
+kate (4:4.12.4-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 09 Apr 2014 10:38:40 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 28 Apr 2014 12:23:45 +0200
 
 kate (4:4.12.3-1) experimental; urgency=medium
 
