--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kate (4:4.13.1-1) UNRELEASED; urgency=medium
+kate (4:4.13.1-1~) UNRELEASED; urgency=medium
 
   * New upstream release.
   * Add pate plugin, sync with kubuntu package.
 
- -- Maximiliano Curia <maxy@debian.org>  Sat, 17 May 2014 15:22:36 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 23 May 2014 13:21:10 +0200
 
 kate (4:4.12.4-1) unstable; urgency=medium
 
