--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ kate (4:4.13.1-1~) UNRELEASED; urgency=medium
   * Add pate plugin, sync with kubuntu package.
   * Update install files.
   * New patch: sideeffects_in_asserts_are_evil.patch
+  * Add lintian-override to for the js_lint.py file.
 
  -- Maximiliano Curia <maxy@debian.org>  Fri, 23 May 2014 13:21:10 +0200
 
