--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+kate (4:4.13.1-2) UNRELEASED; urgency=medium
+
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 31 May 2014 15:18:33 +0200
+
 kate (4:4.13.1-1) unstable; urgency=medium
 
   * New upstream release.
