--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ kate (4:4.13.1-2) UNRELEASED; urgency=medium
     https://bugs.debian.org/729215#10).
   * Do not really install (even if renamed) the go.xml syntax file, since
     it is already provided by kate-syntax-go (see #628161).
+  * Remove the files we must not install for real, so this should help not
+    installing them accidentally again.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 31 May 2014 15:18:33 +0200
 
