--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-kate (4:4.13.1-2) UNRELEASED; urgency=medium
+kate (4:4.13.1-2) unstable; urgency=medium
 
-  [ Pino Toscano ]
+  * Team upload.
   * Disable pate, since it introduces a build-dependency loop (see also
     https://bugs.debian.org/729215#10).
   * Do not really install (even if renamed) the go.xml syntax file, since
@@ -10,7 +10,7 @@ kate (4:4.13.1-2) UNRELEASED; urgency=medium
   * Disable the build of tests, since they are not (and cannot be) run;
     patch debian-disable-tests.diff.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 31 May 2014 15:18:33 +0200
+ -- Pino Toscano <pino@debian.org>  Sat, 31 May 2014 16:26:09 +0200
 
 kate (4:4.13.1-1) unstable; urgency=medium
 
