--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 kate (4:4.13.3-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Remove patch: debian-disable-tests.diff, test are run with
+    autopkgtest.
 
  -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Jul 2014 13:03:27 +0200
 
