--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-kate (4:4.13.3-1) UNRELEASED; urgency=medium
+kate (4:4.13.3-1~) UNRELEASED; urgency=medium
 
   * New upstream release.
   * Remove patch: debian-disable-tests.diff, test are run with
     autopkgtest.
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 16 Jul 2014 13:03:27 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 31 Jul 2014 21:23:39 +0200
 
 kate (4:4.13.1-2) unstable; urgency=medium
 
