--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:4.13.3-2) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 01 Aug 2014 13:46:26 +0200
+
 kate (4:4.13.3-1) unstable; urgency=medium
 
   * New upstream release.
