--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 kate (4:4.13.3-2) UNRELEASED; urgency=medium
 
-  * 
+  * Build with tests disabled.
 
  -- Maximiliano Curia <maxy@debian.org>  Fri, 01 Aug 2014 13:46:26 +0200
 
