--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-kate (4:4.14.0-1) UNRELEASED; urgency=medium
+kate (4:4.14.0-1~) UNRELEASED; urgency=medium
 
   * Build with tests disabled.
   * New patch: do_not_enforce_tests
   * New upstream release.
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 18 Aug 2014 18:29:05 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sun, 24 Aug 2014 23:29:54 +0200
 
 kate (4:4.13.3-1) unstable; urgency=medium
 
