--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ kate (4:4.14.0-1~) UNRELEASED; urgency=medium
   * Build with tests disabled.
   * New patch: do_not_enforce_tests
   * New upstream release.
+  * Update install files.
 
  -- Maximiliano Curia <maxy@debian.org>  Sun, 24 Aug 2014 23:29:54 +0200
 
