--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-kate (4:4.14.0-1~) UNRELEASED; urgency=medium
+kate (4:4.14.0-1) unstable; urgency=medium
 
   * Build with tests disabled.
   * New patch: do_not_enforce_tests
   * New upstream release.
   * Update install files.
 
- -- Maximiliano Curia <maxy@debian.org>  Sun, 24 Aug 2014 23:29:54 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 25 Aug 2014 00:05:54 +0200
 
 kate (4:4.13.3-1) unstable; urgency=medium
 
