--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:4.14.1-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (4.14.1).
+
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 12 Sep 2014 20:27:17 +0200
+
 kate (4:4.14.0-1) unstable; urgency=medium
 
   * Build with tests disabled.
