--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kate (4:4.14.2-1~) UNRELEASED; urgency=medium
 
   * New upstream release (4.14.2).
+  * Update install files.
 
  -- Maximiliano Curia <maxy@debian.org>  Thu, 16 Oct 2014 14:34:51 +0200
 
