--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kate (4:4.14.2-1~) UNRELEASED; urgency=medium
+kate (4:4.14.2-1) unstable; urgency=medium
 
   * New upstream release (4.14.2).
   * Update install files.
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 16 Oct 2014 14:34:51 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 20 Oct 2014 17:12:57 +0200
 
 kate (4:4.14.1-1) unstable; urgency=medium
 
