--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:4.14.2-2~) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 21 Oct 2014 13:06:57 +0200
+
 kate (4:4.14.2-1) unstable; urgency=medium
 
   * New upstream release (4.14.2).
