--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kate (4:4.14.2-2~) UNRELEASED; urgency=medium
+kate (4:4.14.2-2) unstable; urgency=medium
 
   * Move data files to data package. (Closes: #766143)
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 21 Oct 2014 13:06:57 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 21 Oct 2014 13:52:57 +0200
 
 kate (4:4.14.2-1) unstable; urgency=medium
 
