--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ kate (4:4.14.2-0ubuntu2) UNRELEASED; urgency=medium
     - build pate:
       + build-depend on python
       + point dh_auto_configure to the correct libpython location
+  * Update Vcs urls for the new repository location.
+  * Bump Standards-Version to 3.9.6, no changes needed.
+  * Update the maintainer
 
  -- Philip Muškovac <yofel@kubuntu.org>  Sat, 22 Nov 2014 18:52:16 +0100
 
