--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:4.14.3-0ubuntu2) UNRELEASED; urgency=medium
+
+  * kate-data breaks/replaces katepart << 4:4.14.3 (LP: #1395466)
+
+ -- Philip Muškovac <yofel@kubuntu.org>  Tue, 25 Nov 2014 19:42:45 +0100
+
 kate (4:4.14.3-0ubuntu1) vivid; urgency=medium
 
   * Merge with debian unstable, remaining changes:
