--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 kate (4:4.14.3-0ubuntu2) UNRELEASED; urgency=medium
 
-  * kate-data breaks/replaces katepart << 4:4.14.3 (LP: #1395466)
+  * kate-data breaks/replaces katepart << 4:4.14.3-0ubuntu2~ (LP: #1395466)
   * Remove files from kate that conflict with kate-data
   * kate-data breaks/replaces kate << 4:14.3-0ubuntu2~
 
