--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kate (4:4.14.3-0ubuntu2) UNRELEASED; urgency=medium
+kate (4:4.14.3-0ubuntu2) vivid; urgency=medium
 
   * kate-data breaks/replaces katepart << 4:4.14.3-0ubuntu2~ (LP: #1395466)
   * Remove files from kate that conflict with kate-data
