--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kate (4:14.12.0-0ubuntu1) UNRELEASED; urgency=medium
+kate (4:14.12.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 12 Dec 2014 04:16:56 -0800
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 15 Dec 2014 15:38:19 +0100
 
 kate (4:14.11.97-0ubuntu1) vivid; urgency=medium
 
