--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kate (4:14.12.2-0ubuntu1) UNRELEASED; urgency=medium
+kate (4:14.12.2-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 05 Feb 2015 20:56:26 +0000
+ -- Scarlett Clark <sgclark@kubuntu.org>  Tue, 10 Feb 2015 07:12:54 -0800
 
 kate (4:14.12.0-0ubuntu3) vivid; urgency=medium
 
