--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:14.12.2-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (14.12.2).
+
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 23 Feb 2015 16:01:02 +0100
+
 kate (4:14.12.2-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
