--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kate (4:14.12.2-1~) UNRELEASED; urgency=medium
 
   * New upstream release (14.12.2).
+  * Update copyright information.
 
  -- Maximiliano Curia <maxy@debian.org>  Mon, 23 Feb 2015 16:01:02 +0100
 
