--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kate4 (4:4.14.3-1~) UNRELEASED; urgency=medium
+kate4 (4:4.14.3-1) experimental; urgency=medium
 
   * Prepare Debian release.
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 23 Feb 2015 23:46:28 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 24 Feb 2015 00:00:48 +0100
 
 kate4 (4:4.14.3-0ubuntu4) vivid; urgency=medium
 
