--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kate (4:14.12.3-0ubuntu1) UNRELEASED; urgency=medium
+kate (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
   [ Scarlett Clark ]
   * New upstream release
@@ -6,7 +6,7 @@ kate (4:14.12.3-0ubuntu1) UNRELEASED; urgency=medium
   [ Jonathan Riddell ]
   * Don't install applet file, broken in 14.12
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 09 Mar 2015 20:54:11 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 13 Mar 2015 13:18:13 -0700
 
 kate (4:14.12.2-0ubuntu1) vivid; urgency=medium
 
