--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kate (4:14.12.3-1~) UNRELEASED; urgency=medium
+kate (4:14.12.3-1) experimental; urgency=medium
 
   * New upstream release (14.12.3).
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 26 Mar 2015 12:21:17 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Sun, 29 Mar 2015 15:12:54 +0200
 
 kate (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
