--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:14.12.3-0ubuntu2) vivid; urgency=medium
+
+  * Add upstream_find-IconThemes.diff to fix compile
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 15 Apr 2015 16:16:22 +0200
+
 kate (4:14.12.3-0ubuntu1) vivid; urgency=medium
 
   [ Scarlett Clark ]
