--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:15.04.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 15 Apr 2015 11:36:23 -0700
+
 kate (4:14.12.3-0ubuntu2) vivid; urgency=medium
 
   * Add upstream_find-IconThemes.diff to fix compile
