--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kate (4:15.04.0-1~) UNRELEASED; urgency=medium
 
   * New upstream release (15.04.0).
+  * Remove upstream applied patch: upstream_find-IconThemes.diff
 
  -- Maximiliano Curia <maxy@debian.org>  Thu, 23 Apr 2015 16:18:18 +0200
 
