--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-kate (4:15.04.0-0ubuntu1) UNRELEASED; urgency=medium
+kate (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * New upstream release
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 15 Apr 2015 11:36:23 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 13 May 2015 21:20:47 -0700
 
 kate (4:14.12.3-0ubuntu2) vivid; urgency=medium
 
