--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-kate (4:15.04.0-1~) UNRELEASED; urgency=medium
+kate (4:15.04.1-1~) UNRELEASED; urgency=medium
 
   * New upstream release (15.04.0).
   * Remove upstream applied patch: upstream_find-IconThemes.diff
+  * New upstream release (15.04.1).
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 23 Apr 2015 16:18:18 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 18 May 2015 14:08:49 +0200
 
 kate (4:14.12.3-1) experimental; urgency=medium
 
