--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ kate (4:15.04.1-0ubuntu2) UNRELEASED; urgency=medium
   [ Scarlett Clark ]
   * Fix merge conflict (changelog version discrepancy)
   * manual merge. 
+  * manual merge backports. 
 
  -- Felix Geyer <debfx@ubuntu.com>  Wed, 27 May 2015 23:44:57 +0200
 
