--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ kate (4:15.04.1-0ubuntu2) UNRELEASED; urgency=medium
   * Fix merge conflict (changelog version discrepancy)
   * manual merge. 
   * manual merge backports. 
+  * Remove upstream_find-IconThemes.diff from series file.
+    The patch does not exist in directory. 
 
  -- Felix Geyer <debfx@ubuntu.com>  Wed, 27 May 2015 23:44:57 +0200
 
