--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,11 @@
-kate (4:15.04.1-1~) UNRELEASED; urgency=medium
+kate (4:15.04.2-1~) UNRELEASED; urgency=medium
 
   * New upstream release (15.04.0).
   * Remove upstream applied patch: upstream_find-IconThemes.diff
   * New upstream release (15.04.1).
+  * New upstream release (15.04.2).
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 18 May 2015 14:08:49 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 05 Jun 2015 11:01:43 +0200
 
 kate (4:14.12.3-1) experimental; urgency=medium
 
