--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kate (4:15.04.1-0ubuntu2) UNRELEASED; urgency=medium
+kate (4:15.04.2-0ubuntu1) UNRELEASED; urgency=medium
 
   [ Felix Geyer ]
   * Fix "KDEInit could not launch Kate" error when opening second file with Kate
@@ -14,7 +14,10 @@ kate (4:15.04.1-0ubuntu2) UNRELEASED; urgency=medium
   * and remove upstream_Register_with_dbus_to_wake_up_KRun.patch
     it has already been applied to this backport. 
 
- -- Felix Geyer <debfx@ubuntu.com>  Wed, 27 May 2015 23:44:57 +0200
+  [ Jonathan Riddell ]
+  * New upstream release
+
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Sat, 06 Jun 2015 00:51:49 +0200
 
 kate (4:15.04.1-0ubuntu1) UNRELEASED; urgency=medium
 
