--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,13 @@
-kate (4:15.04.2-1~) UNRELEASED; urgency=medium
+kate (4:15.04.3-1~) UNRELEASED; urgency=medium
 
   * New upstream release (15.04.0).
   * Remove upstream applied patch: upstream_find-IconThemes.diff
   * New upstream release (15.04.1).
   * New upstream release (15.04.2).
   * Update copyright information.
+  * New upstream release (15.04.3).
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 05 Jun 2015 11:01:43 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 03 Jul 2015 16:07:13 +0200
 
 kate (4:15.04.2-0ubuntu1) wily; urgency=medium
 
