--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kate (4:15.04.3-1~) UNRELEASED; urgency=medium
+kate (4:15.04.3-1) experimental; urgency=medium
 
   * New upstream release (15.04.0).
   * Remove upstream applied patch: upstream_find-IconThemes.diff
@@ -7,7 +7,7 @@ kate (4:15.04.3-1~) UNRELEASED; urgency=medium
   * Update copyright information.
   * New upstream release (15.04.3).
 
- -- Maximiliano Curia <maxy@debian.org>  Fri, 03 Jul 2015 16:07:13 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 03 Jul 2015 16:07:50 +0200
 
 kate (4:15.04.2-0ubuntu1) wily; urgency=medium
 
