--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-kate (4:15.04.3-0ubuntu2) UNRELEASED; urgency=medium
+kate (4:15.07.90-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release
   * Add missing QML dependencies
+  * new upstream beta release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 15 Jul 2015 16:47:48 +0200
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 13 Aug 2015 10:49:20 +0100
 
 kate (4:15.04.2-0ubuntu1) wily; urgency=medium
 
