--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-kate (4:15.07.90-0ubuntu1) UNRELEASED; urgency=medium
+kate (4:15.07.90-0ubuntu1) wily; urgency=medium
 
   * New upstream release
   * Add missing QML dependencies
   * new upstream beta release
 
- -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 13 Aug 2015 10:49:20 +0100
+ -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 18 Aug 2015 09:34:00 +0100
 
 kate (4:15.04.2-0ubuntu1) wily; urgency=medium
 
