--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:15.08.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * new upstream release
+
+ -- Clive Johnston <clivejo@aol.com>  Thu, 20 Aug 2015 13:16:38 +0000
+
 kate (4:15.07.90-0ubuntu1) wily; urgency=medium
 
   * New upstream release
