--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kate (4:15.08.0-1~) UNRELEASED; urgency=medium
+kate (4:15.08.0-1) unstable; urgency=medium
 
   * New upstream release (15.08.0).
   * Add fake dependency for the kde4 katepapart package.
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 08 Sep 2015 14:05:21 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 08 Sep 2015 17:18:25 +0200
 
 kate (4:15.08.0-0ubuntu1) wily; urgency=medium
 
