--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:15.08.0-2~) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 17 Sep 2015 18:54:35 +0200
+
 kate (4:15.08.0-1) unstable; urgency=medium
 
   * New upstream release (15.08.0).
