--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kate (4:15.08.0-2~) UNRELEASED; urgency=medium
 
-  * 
+  * Drop fake katepart dependency, it wasnt really needed. (Closes:
+    799294) Thanks to Ralf Jung
 
  -- Maximiliano Curia <maxy@debian.org>  Thu, 17 Sep 2015 18:54:35 +0200
 
