--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kate (4:15.08.1-2~) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 19 Sep 2015 12:49:32 +0200
+
 kate (4:15.08.1-1) unstable; urgency=medium
 
   * Drop fake katepart dependency, it wasnt really needed. (Closes:
