--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 kate (4:15.08.1-2~) UNRELEASED; urgency=medium
 
   * 
+  * Add copyright information about the current license of the linkable
+    code. (Closes: #799431)
 
  -- Maximiliano Curia <maxy@debian.org>  Sat, 19 Sep 2015 12:49:32 +0200
 
