--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-kate (4:15.08.1-2~) UNRELEASED; urgency=medium
+kate (4:15.08.2-1~) UNRELEASED; urgency=medium
 
   * Add copyright information about the current license of the linkable
     code. (Closes: #799431)
+  * New upstream release (15.08.2).
 
- -- Maximiliano Curia <maxy@debian.org>  Sat, 19 Sep 2015 12:49:32 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 12 Oct 2015 15:18:25 +0200
 
 kate (4:15.08.1-1) unstable; urgency=medium
 
