update lintian overrides

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ kate (4:17.08.3-0r1) UNRELEASED; urgency=medium
   * Simplify watch file, and switch it to https.
   * Remove unused build dependencies: libkf5notifications-dev, and
     libkf5service-dev.
+  * Update lintian overrides.
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 26 Nov 2017 12:53:52 +0100
 
