more B-Ds tweaks

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,7 +6,9 @@ kate (4:17.08.3-0r1) UNRELEASED; urgency=medium
     drop translations.
   * Bump Standards-Version to 4.1.1, no changes required.
   * Simplify watch file, and switch it to https.
-  * Remove unused build dependencies: libkf5notifications-dev, and
+  * Switch the transitional kdoctools-dev build dependency to
+    libkf5doctools-dev.
+  * Remove unused build dependencies: kio-dev, libkf5notifications-dev, and
     libkf5service-dev.
   * Update lintian overrides.
   * Drop rules to remove files from debian/tmp, since the references files do
