move kwrite stuff to kwrite

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,8 @@ kate (4:17.08.3-3) UNRELEASED; urgency=medium
   * Remove unused library stuff from debian/rules.
   * Add the "allow-stderr" restriction to the "testsuite" autopkgtest, since
     the tools that run produce output also on stderr.
+  * Move the translations and icons of kwrite from kate5-data to kwrite
+    - add proper breaks/replaces
 
  -- Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 09 Dec 2017 12:04:39 +0100
 
